[package]
name = "local_mcp_servers"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
tokio = {version="1.47.1", features = ["full"]}
tokio-stream = "0.1"
url = "2.5.4"